15_03_20_21_31 //added MainMenuActivity.java

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,5 +2,8 @@
 <resources>
 
     <string name="app_name">gdxGP</string>
+    <string name="helpButton">Help</string>
+    <string name="startButton">Start</string>
+    <string name="exitButton">Exit</string>
 
 </resources>
