15_04_19_17_34 //removed old Activity //renamed Fraction to Particle

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">gdxGP</string>
     <string name="helpButton">Help</string>
     <string name="startButton">Start</string>
     <string name="exitButton">Exit</string>
+    <string name="appName">Gravity Particles</string>
 
 </resources>
