15_06_13_19_00 //added SettingsActivity //added settings class //added music and sound volume in the settings

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">gdxGP</string>
-    <string name="helpButton">Help</string>
-    <string name="startButton">Start</string>
-    <string name="exitButton">Exit</string>
+    <string name="app_name"> gdxGP </string>
+    <string name="helpButton">  Help  </string>
+    <string name="startButton"> Start </string>
+    <string name="settingsButton">Settings</string>
+    <string name="exitButton">  Exit  </string>
     <string name="appName">Gravity Particles</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
