15_06_23_16_40 //note_gp.xml update //some fixes

--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name"> gdxGP </string>
+    <string name="app_name"> Gravity Particles </string>
+
     <string name="helpButton">  Help  </string>
     <string name="startButton"> Start </string>
     <string name="settingsButton">Settings</string>
@@ -10,5 +11,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="choose_the_level">Choose a level</string>
 
 </resources>
