--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="action_settings">Settings</string>
     <string name="choose_the_level">Choose a level</string>
     <string name="title_activity_logo">Logo</string>
+    <string name="musicVolume">Music Volume</string>
+    <string name="soundVolume">Sound Volume</string>
+    <string name="debugSwitchText">New Switch</string>
 
 </resources>
